--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=estate;User=mwangea;Password=Mwangea6449;"
+    "DefaultConnection": "Server=localhost;Database=estate;User=root;Password=mwangea;"
   },
   "JwtSettings": {
     "JwtKey": "hsxhsxhmsxnsxnjasxjsxjsxnnxsskwjxinj",
