--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
-appSettings.json
+appsettings.json
 
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
